altered the look a bit, added a function to pull numbers from the inputs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <link rel="stylesheet" href="css/style.css">
 <body>
     <h1>Powerball Lottery</h1>
+    <div class="account">
+        <label for="demo">R:</label>
+        <p id="demo">70</p>
+    </div>
     <div class="container">
         
         <div class="item">
@@ -33,7 +37,11 @@
     </div>
     <div class="item">
         <p>Powerball</p>
-        <input type="number" name="" id="n5">
+        <input type="number" name="" id="pb" maxlength="70">
     </div>
+    <button type="submit" id="bet">Submit</button>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
