It collects user-input numbers and generates random numbers for a lottery simulation. It then compares the user's numbers with the randomly generated ones. If there are any matches, it calculates the winnings based on the number of matches and the accuracy of the bonus ball guess. Finally, it updates the user interface with the results of the simulation.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Powerball Lottery</h1>
     <div class="account">
-        <label for="demo">R:</label>
+        <label>R:</label>
         <p id="demo">70</p>
     </div>
     <div class="container">
@@ -40,8 +40,9 @@
         <input type="number" name="" id="pb" maxlength="70">
     </div>
     <button type="submit" id="bet">Submit</button>
-
-
+    <label id="user">Your Numbers: </label>
+    <p  id="winings">You have won: </p>
+    <label for="lotto" id="lotto">Winning Numbers: </label>
     <script src="js/script.js"></script>
 </body>
 </html>
