code optimization, along with spelling error fixes, and removal of the alert cheks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <button type="submit" id="bet">Submit</button>
     <label id="user">Your Numbers: </label>
-    <p  id="winings">You have won: </p>
+    <p  id="winnings">You have won: </p>
     <label for="lotto" id="lotto">Winning Numbers: </label>
     <script src="js/script.js"></script>
 </body>
